align date fixed

--- a/themes/noqqe/static/css/main.css
+++ b/themes/noqqe/static/css/main.css
@@ -169,6 +169,13 @@ code.rev {
   display: none
 }
 
+span.timestamp-list {
+  min-width: 45px;
+  display: inline-block;
+  max-width: 45px;
+  align: right;
+}
+
 /* Quotes */
 
 blockquote {
